# skbuild-test

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: release.yml
src/skbuild_test/: library.cpp
